[package]
name = "taskspooler"
version = "0.1.0"
authors = ["higumachan <harekumo792154@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server_run"
path = "src/server_run.rs"

[[bin]]
name = "server_daemon"
path = "src/server_daemon.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "helloworld"
path = "test_commands/src/helloworld.rs"

[[bin]]
name = "helloworld10"
path = "test_commands/src/helloworld10.rs"

[dependencies]
tonic        = "0.2.0"
bytes        = "0.4"
prost        = "0.5"
prost-derive = "0.5"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
argparse = "0.2.2"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1.0"
config = "0.10.1"
lazy_static = "^0.2.8"
dirs = "2.0"
strum = "0.18.0"
strum_macros = "0.18.0"
daemonize = "0.4.1"


[build-dependencies]
tonic-build  = "0.2.0"
